--- a/Botones/app/src/main/res/layout/activity_segunda.xml
+++ b/Botones/app/src/main/res/layout/activity_segunda.xml
@@ -55,4 +55,16 @@
         app:layout_constraintStart_toStartOf="@+id/guideline8"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <ImageView
+        android:id="@+id/imgVLogo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="#4CAF50"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/iest" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
