--- a/TareaTextView/app/src/main/res/layout/activity_main.xml
+++ b/TareaTextView/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,11 @@
         android:id="@+id/txtView"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
         android:rotationX="30"
-        android:text="Soy un programador que adora los retos y que no se rinde fácilmente. Mi objetivo principal es desarrollarme profesionalmente y mejorar mis habilidades, buscando las oportunidades que me permitan cumplir mis metas."
+        android:text="@string/txtViewLabel"
         android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="#FFEB3B"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -22,6 +24,6 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.262" />
+        app:layout_constraintVertical_bias="0.268" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
