--- a/WearOSNumMayor/app/src/main/res/layout/activity_main.xml
+++ b/WearOSNumMayor/app/src/main/res/layout/activity_main.xml
@@ -15,17 +15,17 @@
         app:layout_boxedEdges="all">
 
         <TextView
-            android:id="@+id/txtSaludo"
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/hello_world" />
+            android:text="Compara 2 Valores" />
 
         <Button
-            android:id="@+id/btnCambio"
+            android:id="@+id/btnCalcular"
             android:layout_width="wrap_content"
             android:layout_gravity="bottom|center"
-            android:text="Cambiar"
+            android:text="Calcular"
             android:layout_height="wrap_content"
             android:backgroundTint="#436eed" />
 
