--- a/RelativeLayout/app/src/main/res/values/colors.xml
+++ b/RelativeLayout/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#ffbc42</color>
+    <color name="bg_row">#edf2fb</color>
 </resources>
