--- a/TareaBotonesIntents/app/src/main/res/layout/activity_second.xml
+++ b/TareaBotonesIntents/app/src/main/res/layout/activity_second.xml
@@ -32,6 +32,7 @@
             android:padding="40dp"
             android:background="#fff">
             <TextView
+                android:id="@+id/txtResult"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/msgSecond"
