--- a/RelativeLayout/app/src/main/res/layout/activity_datos.xml
+++ b/RelativeLayout/app/src/main/res/layout/activity_datos.xml
@@ -50,6 +50,7 @@
 
         <TextView
             android:id="@+id/canalValue"
+            android:text=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#222222"
@@ -72,6 +73,7 @@
 
         <TextView
             android:id="@+id/programaValue"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#222222"
