--- a/LinearLayoutActivity/app/src/main/res/layout/activity_main.xml
+++ b/LinearLayoutActivity/app/src/main/res/layout/activity_main.xml
@@ -111,20 +111,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:text="@string/btnDividir" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_margin="16dp"
             android:gravity="center_horizontal"
-            android:layout_margin="16dp">
+            android:orientation="horizontal">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btnMulti"
-                android:layout_marginRight="16dp"/>
+                android:layout_marginRight="16dp"
+                android:text="@string/btnMulti" />
 
             <Button
                 android:layout_width="wrap_content"
