--- a/Clase6Marzo/app/src/main/res/layout/activity_main.xml
+++ b/Clase6Marzo/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:padding="32dp">
 
             <TextView
+                android:id="@+id/txtWelcome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Bienvenidos"
