--- a/Clase6Marzo/app/src/main/res/layout/activity_second.xml
+++ b/Clase6Marzo/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".SecondActivity">
 
   <LinearLayout
@@ -12,7 +12,8 @@
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="#dbeafe"
-      android:padding="16dp">
+      android:paddingHorizontal="16dp"
+      >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,79 +22,63 @@
         android:background="#f8fafc"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp">
-      <TextView
+      <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:text="Lista de Juegos"
-          android:textAlignment="center"
-          android:textSize="24dp"
-          android:textStyle="bold"
-          android:textColor="@color/primary"/>
+          android:background="#e2e8f0"
+          android:padding="16dp">
 
-      <androidx.core.widget.NestedScrollView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="32dp">
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            app:srcCompat="@drawable/juego"/>
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#e2e8f0"
-            android:padding="16dp"
-            android:layout_marginBottom="16dp">
+            android:text="Nombre del Juego"
+            android:layout_toEndOf="@id/imageView"
+            android:layout_marginLeft="16dp"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:textColor="#3f3f46"/>
 
-          <ImageView
-              android:id="@+id/imageView"
-              android:layout_width="90dp"
-              android:layout_height="90dp"
-              app:srcCompat="@drawable/juego"/>
+        <TextView
+            android:id="@+id/txtConsole"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Consola"
+            android:layout_marginLeft="16dp"
+            android:layout_toEndOf="@id/imageView"
+            android:layout_below="@id/txtTitle"
+            android:textSize="14dp"
+            android:textStyle="bold"/>
 
-          <TextView
-              android:id="@+id/txtTitle"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="Nombre del Juego"
-              android:layout_toEndOf="@id/imageView"
-              android:layout_marginLeft="16dp"
-              android:textSize="16dp"
-              android:textStyle="bold"
-              android:textColor="#3f3f46"/>
+        <TextView
+            android:id="@+id/txtPrice"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="130.00 MXN"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/txtTitle"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:textColor="#0f172a"/>
 
-          <TextView
-              android:layout_marginTop="8dp"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="Consola"
-              android:layout_marginLeft="16dp"
-              android:layout_toEndOf="@id/imageView"
-              android:layout_below="@id/txtTitle"
-              android:textSize="14dp"
-              android:textStyle="bold"/>
-
-          <TextView
-              android:id="@+id/txtPrice"
-              android:layout_marginTop="8dp"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="130.00 MXN"
-              android:layout_alignParentRight="true"
-              android:layout_below="@id/txtTitle"
-              android:textSize="14dp"
-              android:textStyle="bold"
-              android:textColor="#0f172a"/>
-
-          <Button
-              android:id="@+id/btnSave"
-              android:layout_width="110dp"
-              android:layout_height="42dp"
-              android:text="Comprar"
-              android:backgroundTint="@color/primary"
-              android:layout_below="@id/txtPrice"
-              android:layout_alignParentRight="true"
-              />
-        </RelativeLayout>
-
-      </androidx.core.widget.NestedScrollView>
+        <Button
+            android:id="@+id/btnBuy"
+            android:layout_width="110dp"
+            android:layout_height="42dp"
+            android:text="Comprar"
+            android:backgroundTint="@color/primary"
+            android:layout_below="@id/txtPrice"
+            android:layout_alignParentRight="true"
+            />
+      </RelativeLayout>
     </LinearLayout>
 
 
