--- a/Clase6Marzo/app/src/main/res/layout/activity_lista_de_juegos.xml
+++ b/Clase6Marzo/app/src/main/res/layout/activity_lista_de_juegos.xml
@@ -24,6 +24,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerVideojuegos"
         tools:listitem="@layout/activity_second"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
