--- a/EjemploSqlitekotlin/app/src/main/res/drawable/fondo_curvo.xml
+++ b/EjemploSqlitekotlin/app/src/main/res/drawable/fondo_curvo.xml
@@ -3,12 +3,12 @@
   <!-- https://developer.android.com/guide/topics/resources/drawable-resource -->
     <item>
         <shape >
-            <solid android:color="#E8E3E3"></solid>
+            <solid android:color="#E4EFF8"></solid>
             <stroke
-                android:width="1dp"
-                android:color="#263EC3"
+                android:width="2dp"
+                android:color="#436eed"
                 ></stroke>
-            <corners android:radius="20dp"></corners>
+            <corners android:radius="4dp"></corners>
         </shape>
     </item>
 </selector>
