--- a/EjemploSqlitekotlin/app/src/main/res/layout/row_juego.xml
+++ b/EjemploSqlitekotlin/app/src/main/res/layout/row_juego.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:background="@drawable/fondo_curvo"
         android:layout_margin="5dp"
+        android:padding="16dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Nombre del Juego"
-            android:textColor="@color/purple_700"
+            android:textStyle="bold"
+            android:textColor="#436eed"
             android:textSize="32sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             />
@@ -41,7 +43,6 @@
         <LinearLayout
             android:orientation="horizontal"
             android:gravity="end"
-            android:layout_marginEnd="25dp"
             android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -49,7 +50,6 @@
             <ImageView
                 app:srcCompat="@drawable/baseline_edit_24"
                 android:id="@+id/img01"
-                android:layout_marginEnd="16dp"
                 android:layout_width="32dp"
                 android:layout_height="32dp"/>
 
@@ -57,7 +57,7 @@
                 app:srcCompat="@drawable/baseline_delete_forever_24"
                 android:id="@+id/img02"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+
                 android:layout_width="32dp"
                 android:layout_height="32dp"/>
         </LinearLayout>
