--- a/ExamenParcial2/app/src/main/res/values/colors.xml
+++ b/ExamenParcial2/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#E7F4FF</color>
-    <color name="primary">#FFFFFFFF</color>
-    <color name="secondary">#FFFFFFFF</color>
+    <color name="background">#EEF5FC</color>
+    <color name="primary">#436eed</color>
+    <color name="secondary">#EFEFEF</color>
     <color name="text">#212121</color>
 </resources>
