--- a/ExamenParcial2/app/src/main/res/layout/activity_main.xml
+++ b/ExamenParcial2/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:padding="16dp"
-        >
+    android:padding="16dp"
+    >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,7 +34,7 @@
                 >
 
                 <RelativeLayout
-                    android:id="@+id/optionCat"
+                    android:id="@+id/MenuOptionCat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
@@ -46,7 +42,7 @@
                     android:background="@color/background"
                     >
                     <ImageView
-                        android:id="@+id/imgCat"
+                        android:id="@+id/imgGato"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_weight="1"
@@ -56,7 +52,7 @@
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/imgCat"
+                        android:layout_below="@+id/imgGato"
                         android:text="Gatos"
                         android:textAlignment="center"
                         android:textStyle="bold"
@@ -64,7 +60,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/optionProfile"
+                    android:id="@+id/MenuOptionProfile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
@@ -72,7 +68,7 @@
                     android:background="@color/background"
                     >
                     <ImageView
-                        android:id="@+id/imgProfile"
+                        android:id="@+id/imgPerfil"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_weight="1"
@@ -82,7 +78,7 @@
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/imgProfile"
+                        android:layout_below="@+id/imgPerfil"
                         android:text="Perfil"
                         android:textAlignment="center"
                         android:textStyle="bold"
@@ -100,7 +96,7 @@
                 >
 
                 <RelativeLayout
-                    android:id="@+id/optionConfig"
+                    android:id="@+id/MenuOptionSettings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
@@ -108,7 +104,7 @@
                     android:background="@color/background"
                     >
                     <ImageView
-                        android:id="@+id/imgConfig"
+                        android:id="@+id/imgSettings"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_weight="1"
@@ -118,7 +114,7 @@
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/imgConfig"
+                        android:layout_below="@+id/imgSettings"
                         android:text="Configurar"
                         android:textAlignment="center"
                         android:textStyle="bold"
@@ -126,7 +122,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/optionClose"
+                    android:id="@+id/MenuOptionClose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
@@ -134,7 +130,7 @@
                     android:background="@color/background"
                     >
                     <ImageView
-                        android:id="@+id/imgClose"
+                        android:id="@+id/imgCerrar"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_weight="1"
@@ -144,7 +140,7 @@
                     <TextView
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/imgClose"
+                        android:layout_below="@+id/imgCerrar"
                         android:text="Cerrar"
                         android:textAlignment="center"
                         android:textStyle="bold"
@@ -155,6 +151,4 @@
 
         </LinearLayout>
 
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
