--- a/Parcial2/app/src/main/res/layout/activity_mostar_preferencias.xml
+++ b/Parcial2/app/src/main/res/layout/activity_mostar_preferencias.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".MostarPreferencias">
+    tools:context=".ViewItem">
 
     <LinearLayout
         android:layout_width="match_parent"
