--- a/EjemploSqlitekotlin/app/src/main/res/layout/activity_listado.xml
+++ b/EjemploSqlitekotlin/app/src/main/res/layout/activity_listado.xml
@@ -14,6 +14,7 @@
         app:srcCompat="@android:drawable/ic_menu_add"
         android:layout_margin="16dp" />
 
+
     <ListView
         android:padding="6dp"
         tools:listitem="@layout/row_juego"
@@ -22,5 +23,13 @@
         android:layout_height="wrap_content">
 
     </ListView>
+
+<!--
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/row_juego"
+        android:id="@+id/recyclerView"/>
+        -->
 
 </FrameLayout>
